# Protein-Data-Analysis

./: LICENSE  README.md
backend/: Dockerfile  README.md  docker-compose.yml  main.py  mongo-init.js  pyproject.toml
backend/app/models/: __init__.py
backend/app/routers/: annotation.py  data_import.py  graph.py  proteins.py  statistics.py
backend/app/services/: data_import_service.py  graph_service.py  label_propagation_service.py  mongodb_service.py  neo4j_service.py
backend/app/utils/: __init__.py
docs/: NoSQL_DB____Project_2025-1.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: Navbar.vue  Pagination.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: AnnotationPropagate.vue  GraphBuild.vue  GraphNeighbors.vue  Home.vue  ImportData.vue  NotFound.vue  ProteinDetail.vue  Proteins.vue  Statistics.vue
